# tex_programming_coursework

./: .gitignore  CMakeLists.txt  chess_resources.qrc  main.cpp  readme.txt  resources.qrc
Interface/include/: ChessWidget.h  ColorSelectionMenu.h  IntermediateMenu.h  IpInputMenu.h  MainMenu.h  MainWindow.h  ResultsMenu.h  StandbyMenu.h
Interface/resources/: chess_resources.qrc
Interface/src/: ChessWidget.cpp  ColorSelectionMenu.cpp  IntermediateMenu.cpp  IpInputMenu.cpp  MainMenu.cpp  MainWindow.cpp  ResultsMenu.cpp  StandbyMenu.cpp
Interface/styles/: styles.css  styles.qrc
game/include/: chessboard.h
game/src/: chessboard.cpp
network_game/include/: GameClient.h  GameServer.h
network_game/src/: GameClient.cpp  GameServer.cpp
pieces/include/: bishop.h  castle.h  figure.h  king.h  knight.h  pawn.h  queen.h
pieces/src/: bishop.cpp  castle.cpp  figure.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp
test/: CMakeLists.txt  test_chess.cpp
